Fixed scrollbar

--- a/styles/03-generic/generic-scrollbar.scss
+++ b/styles/03-generic/generic-scrollbar.scss
@@ -9,5 +9,5 @@ body::-webkit-scrollbar-track {
 }
  
 body::-webkit-scrollbar-thumb {
-  background-color: $blue-400;
+  background-color: $blue-700;
 }
